update-manager (1:0.59.17) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewGtk.py:
    - fix crash in on_window_main_delete_event() (LP#104701)

 --

update-manager (1:0.59.16) feisty; urgency=low

  * set useDevelopmentRelease=False in the self updater on 
    the CD (LP#99171)
  * fix another issue with a unresponsive GUI
  * work around upgrade issue with pango-libthai (LP#104384)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sun,  8 Apr 2007 12:35:00 +0200

update-manager (1:0.59.15) feisty; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - keep the GUI alive while calculating the obsolete
      packages

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  4 Apr 2007 22:40:58 +0200

update-manager (1:0.59.14) feisty; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - fix sources.list rewriting for people with internal or
      unofficial mirrors (LP#73463)
  * DistUpgrade/DistUpgradeCache.py:
    - workaround apache2/php5 upgrade failures (LP#95325)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  3 Apr 2007 16:08:58 +0200

update-manager (1:0.59.13) feisty; urgency=low

  * po/POTFILES.in:
    - reomove [type: ] this confused intltool
  * DistUpgradeControler.py:
    - work around problem with kde tempfile extraction 
      (LP#99380)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon,  2 Apr 2007 11:46:40 +0200

update-manager (1:0.59.12) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - set debian frontend to "kde"
  * DistUpgrade/DistUpgradeCache.py:
    - do not crash when uname -r can't be parsed (LP#97663)
    - remove the nfs upgrade question again, the kernel team
      fixed the regression
  * DistUpgrade/DistUpgradeApport.py:
    - do not crash if no apport gui is available (LP#97498)
  * DistUpgrade/DistUpgradeViewText.py:
    - support details in text-mode (LP#94129)
  * DistUpgrade/DistUpgradeControler.py:
    - fix incorrect auto-installed information from meta-pkgs 
      (LP#86921)