@@ -2,6 +2,8 @@ update-manager (1:0.59.17) feisty; urgency=low
 
   * DistUpgrade/DistUpgradeViewGtk.py:
     - fix crash in on_window_main_delete_event() (LP#104701)
+  * DistUpgrade/apt-autoinst-fixup.py:
+    - set mdadm to manually installed (LP#105663)
 
  --
 
